Added home screen and community screen UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
   go_router: ^14.1.0
+  persistent_bottom_nav_bar: ^5.0.2
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
 
