--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  flutter_dotenv: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.1
   get_it: ^7.7.0
   go_router: ^14.1.0
+  injectable: ^2.4.1
+  json_annotation: ^4.9.0
   persistent_bottom_nav_bar: ^5.0.2
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
@@ -20,12 +26,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  injectable_generator: ^2.6.1
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/
+    - .env
 
   fonts:
     - family: Poppins
@@ -37,3 +47,8 @@ flutter:
         - asset: assets/fonts/Poppins-Light.ttf
         - asset: assets/fonts/Poppins-LightItalic.ttf
         - asset: assets/fonts/Poppins-Medium.ttf
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/ieee-sst-logo.png"
