--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -18,6 +19,7 @@ dependencies:
   go_router: ^14.1.0
   injectable: ^2.4.1
   json_annotation: ^4.9.0
+  logger: ^2.3.0
   persistent_bottom_nav_bar: ^5.0.2
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
@@ -29,6 +31,7 @@ dev_dependencies:
   build_runner: ^2.4.9
   injectable_generator: ^2.6.1
   json_serializable: ^6.8.0
+  very_good_analysis: ^5.1.0
 
 flutter:
   uses-material-design: true
