--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
         {
             "name": "ieee_sst(debug mode)",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
         },
         {
             "name": "ieee_sst (profile mode)",
@@ -23,6 +21,5 @@
             "type": "dart",
             "flutterMode": "release"
         }
-
     ]
 }
