--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
+  formz: ^0.7.0
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
