--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
+  flutter_quill: ^9.3.11
+  font_awesome_flutter: ^10.7.0
   formz: ^0.7.0
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
