--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  date_picker_timeline: ^1.2.5
   equatable: ^2.0.5
   flutter:
     sdk: flutter
