--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "ieee_sst(debug mode)",
             "request": "launch",
             "type": "dart",
+            "program": "lib/main.dart",
         },
         {
             "name": "ieee_sst (profile mode)",
