--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,13 @@ dependencies:
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
   go_router: ^14.1.0
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
   injectable: ^2.4.1
   json_annotation: ^4.9.0
   logger: ^2.3.0
   persistent_bottom_nav_bar: ^5.0.2
+  skeletonizer: ^1.2.0
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
   table_calendar: ^3.1.1
