--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  date_picker_timeline: ^1.2.5
+  date_picker_timeline: 
+    git:
+      url: https://github.com/APuhanic/DatePickerTimelineFlutter.git
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -26,6 +28,7 @@ dependencies:
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
   injectable: ^2.4.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   logger: ^2.3.0
   persistent_bottom_nav_bar: ^5.0.2
@@ -33,6 +36,7 @@ dependencies:
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
   table_calendar: ^3.1.1
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
