--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     git:
       url: https://github.com/APuhanic/DatePickerTimelineFlutter.git
   equatable: ^2.0.5
+  file_picker: ^8.1.1
+  url_launcher: ^6.0.20
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -26,17 +28,22 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.1.0
   google_sign_in: ^6.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   image_picker: ^1.1.2
   injectable: ^2.4.1
+  internet_connection_checker_plus: ^2.5.1
   intl: ^0.19.0
   json_annotation: ^4.9.0
   logger: ^2.3.0
   persistent_bottom_nav_bar: ^5.0.2
-  skeletonizer: ^1.2.0
   supabase_auth_ui: ^0.4.4
   supabase_flutter: ^2.5.2
-  table_calendar: ^3.1.1
   timeago: ^3.7.0
+  webview_flutter: ^4.8.0
+  loading_animation_widget: ^1.2.1
+  country_picker: ^2.0.26
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +58,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/json/
     - .env
 
   fonts:
@@ -63,6 +71,9 @@ flutter:
         - asset: assets/fonts/Poppins-Light.ttf
         - asset: assets/fonts/Poppins-LightItalic.ttf
         - asset: assets/fonts/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+
 
 flutter_launcher_icons:
   android: true
