--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   webview_flutter: ^4.8.0
   loading_animation_widget: ^1.2.1
   country_picker: ^2.0.26
+  firebase_core: ^3.4.1
+  firebase_messaging: ^15.1.1
 
 dev_dependencies:
   flutter_test:
